# Web2Ebook2Audio-converter-2

./: .gitignore  README.md  SCRAPING_FIXES.md  book_library.py  ch000_cleaned.txt  ch000_llm_normalized.json  ch000_llm_raw.json  ch001_cleaned.txt  ch001_llm_normalized.json  ch001_llm_raw.json  ch002_cleaned.txt  ch002_llm_normalized.json  ch002_llm_raw.json  ch488_cleaned.txt  ch488_llm_normalized.json  ch488_llm_raw.json  ch488_raw.txt  chapter_info_all.json  chapter_urls.json  chapters.json  character_database.py  character_voice_manager.py  clean_chapters.py  clean_review_plan.json  dialogue_detector.py  llm test  llm_communication.jsonl  multispeaker_debug.py  pronoun_analyzer.py  pyproject.toml  requirements.txt  scraper.py  selected_range.json  semantic_review_plan.json  setup_unix.sh  setup_windows.ps1
.continue/agents/: config.yaml  new-config.yaml
Test_logs/: ch488_pass1.json  ch488_pass2.json  ch488_raw.txt
ebook_app/: __init__.py  main.py  runtime_paths.py
ebook_app/app/: __init__.py  main.py  main_window.py  top_navbar.py
ebook_app/app/dialogs/: __init__.py  edit_aliases_dialog.py  merge_characters_dialog.py
ebook_app/app/state/: __init__.py  book_library.py  book_state.py  chapter_state.py  character_db.py  settings_manager.py
ebook_app/app/ui/: __init__.py  base_view.py  book_manager.py  browser_view.py  character_view.py  emotion_preview.py  final_preview.py  identification_preview.py  logs_viewer.py  override_editor.py  pipeline_view.py  review_view.py  scrape_preview.py  segmentation_preview.py  settings_view.py  test_view.py  translation_preview.py
ebook_app/app/widgets/: __init__.py  chapter_selector.py  character_editor.py  confidence_bar.py  json_diff_viewer.py  review_inspector_panel.py  segment_inspector_sidebar.py  segment_table.py  speaker_dropdown.py  waveform_preview_widget.py
ebook_app/config/: app_settings.json  glossary.json  scraper_rules.json  translation_settings.json  voices.json
ebook_app/epub/: __init__.py  opf_builder.py  packaging.py  smil_builder.py  toc_builder.py  xhtml_builder.py
ebook_app/pipeline/: __init__.py  chapter_rebuilder.py  controller.py  phases.py
ebook_app/text/: __init__.py
ebook_app/tts/: __init__.py  audio_utils.py  emotion_voice_map.py  kokoro_model_setup.py  silence_trim.py  tts_client.py  tts_engine_local.py  tts_pipeline.py  tts_service.py  tts_service_launcher.py  voice_catalog.py  voice_router.py
src/ebook_app/: __init__.py  app.py  main.py  pipeline_contracts.py  pipeline_controller.py
tests/: test_book_library_progress.py  test_browser_scraper.py  test_character_db_resolution.py  test_dialogue_parser.py  test_kokoro_model_setup.py  test_llm_client.py  test_multispeaker_tts.py  test_pipeline_library_workflow.py  test_pipeline_llm_preflight.py  test_pipeline_multispeaker.py  test_pipeline_page.py  test_regression_fixes.py  test_review_view.py  test_settings_manager.py  test_story_context.py  test_structured_llm_pipeline.py  test_structured_output.py  test_test_view.py  test_text_cleaner.py  test_tts_engine.py  test_tts_service_launcher.py  test_type_classifier.py
tts_service/: requirements.txt  tts_server.py
(+124 files in other folders)
