[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-audio-studio"
version = "0.2.0"
description = "A PySide6 desktop app that converts web novels into EPUB3 audiobooks with multi-speaker TTS."
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "ebooklib>=0.18",
    "deep-translator>=1.11.4",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
# Install when running the GUI in local TTS mode (Python 3.10+ compatible).
local-tts = [
    "kokoro-onnx>=0.4.4,<1.0.0",
    "onnxruntime>=1.17.0",
]
# Install when scraping JS-heavy sites with a browser.
browser = [
    "playwright>=1.44.0",
]
# Full install: GUI + local TTS engine + browser scraping in a single environment.
full = [
    "ebook-audio-studio[browser,local-tts]",
]

[project.scripts]
ebook-audio-studio = "ebook_app.app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ebook_app", "ebook_app.*"]

[tool.pytest.ini_options]
# Only collect tests from the tests/ directory (prevents collecting UI component
# files like ebook_app/app/ui/test_view.py that are not pytest test files).
testpaths = ["tests"]
# Only collect test classes that follow the Test_Foo pattern (underscore),
# not TestFoo (camel-case, which conflicts with GUI page class names like TestPage).
python_classes = ["Test_*"]
